--- a/first_project/templates/portfolio/index.html
+++ b/first_project/templates/portfolio/index.html
@@ -8,6 +8,10 @@
     <h1>ようこそかけいまもるくんへ！💰</h1>
     <p>家計管理が続かないあなたをサポートする家計簿アプリ。</p>
     <p>掲示板機能とリマインダー機能で、シンプルだけど続けられる工夫をぎゅっと詰めました。</p>
+
+    <a href="{% url 'home:login' %}" class="btn btn-primary">アプリ画面へ</a>
+
+
 </body>
 </html>
 
